# pushup-challenge

./: .gitignore  README.md  docker-compose.no-ssl.yml  docker-compose.ssl.yml  sample.acme-companion.env  sample.django.env  sample.env
.devcontainer/: dev.env  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
design/: index.html  landing.html  log.html
design/assets/css/: styles.css
nginx/vhost.d/: default
src/: Dockerfile
src/config/: settings.py  urls.py
src/pages/: views.py
src/pushuplog/: admin.py  apps.py  forms.py  models.py
src/pushuplog/management/commands/: importpushuplog.py
src/pushuplog/migrations/: 0001_initial.py  0002_pushuplogentry_created_at_pushuplogentry_updated_at.py  0003_alter_pushuplogentry_user.py  0004_pushuplogentry_when.py  0005_alter_pushuplogentry_user.py  0006_pushuplogentry_repetitions_total.py  0007_remove_pushuplogentry_repetitions_total_and_more.py  0008_alter_pushuplogentry_options.py
src/requirements/: Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
src/static/css/: base.css  bs-theme-overrides.css
src/static/js/: base.js
src/templates/: base.html  home.html  index.html  logs.html
src/templates/components/: dailylog.html  dailylogtable.html  dailyprogresscard.html  logform.html  logformcard.html  navbar.html  statisticscard.html
src/templates/registration/: login.html
src/users/: admin.py  forms.py  models.py  tests.py
src/users/migrations/: 0001_initial.py
