[project]
name = "PushupChallenge"
version = "1.0"
requires-python = ">=3.9"
dependencies = [ 
    "django",
    "django-allauth",
    "environs[django]",
    "whitenoise",
    "gunicorn",
    "pytz",
    "django-htmx",
    "django-debug-toolbar", # Needs to be here, not in dev
]

[project.optional-dependencies]
dev = [ 
    "pylint-django", 
    "black",
    "flake8",
    "djlint",
    "pytest-django",
]